# walk-these-ways-go2

./: .gitignore  LICENSE  README.md  README_Go1.md  setup.py
go1_gym.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
go1_gym/envs/go1/: go1_config.py
go2_gym/: __init__.py
go2_gym/envs/base/: legged_robot.py  legged_robot_config.py
go2_gym/envs/go1/: go1_config.py
go2_gym/envs/go2/: go2_config.py
go2_gym/envs/go2/velocity_tracking/: __init__.py
go2_gym/envs/rewards/: corl_rewards.py
go2_gym/envs/wrappers/: history_wrapper.py
go2_gym/utils/: terrain.py
go2_gym_deploy/: CMakeLists.txt  setup.py
go2_gym_deploy/autostart/: start_unitree_sdk.sh
go2_gym_deploy/docker/: Makefile
go2_gym_deploy/envs/: lcm_agent.py
go2_gym_deploy/installer/: install_deployment_code.sh
go2_gym_deploy/lcm_types/: leg_control_data_lcmt.hpp  pd_tau_targets_lcmt.hpp  rc_command_lcmt.hpp  state_estimator_lcmt.hpp
go2_gym_deploy/scripts/: deploy_policy.py  send_to_unitree.sh  transfer_gpu2cpu.py
go2_gym_deploy/unitree_sdk2_bin/: lcm_position_go2.cpp  lcm_receive.cpp
go2_gym_deploy/utils/: cheetah_state_estimator.py  deployment_runner.py
go2_gym_learn/eval_metrics/: domain_randomization.py
go2_gym_learn/ppo/: __init__.py  ppo.py  rollout_storage.py
go2_gym_learn/ppo_cse/: __init__.py  ppo.py  rollout_storage.py
logs/example_experiment/2024/01_26/11_18_35_0/: log.pkl
logs/example_experiment/2024/01_26/11_22_05_0/: log.pkl
scripts/: play.py  test.py  train.py
scripts/tmp/legged_data/: adaptation_module_latest.jit
(+42 files in other folders)
